<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/card_route_light_background"
    app:cardCornerRadius="@dimen/route_card_corner_radius"
    app:cardElevation="@dimen/route_card_elevation"
    app:cardUseCompatPadding="false"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/route_card_padding">

        <ImageView
            android:id="@+id/imageViewStatusDot"
            android:layout_width="@dimen/dot_indicator_size"
            android:layout_height="@dimen/dot_indicator_size"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:src="@drawable/ic_status_dot_green"
            app:layout_constraintBottom_toBottomOf="@id/textViewRouteName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewRouteName" />

        <TextView
            android:id="@+id/textViewRouteName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/example_route_name"
            android:textColor="@color/text_primary_on_light"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewRouteDuration"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/imageViewStatusDot"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRouteDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_duration"
            android:textColor="@color/status_on_time"
            android:textSize="@dimen/text_size_body"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textViewRouteName"
            app:layout_constraintEnd_toStartOf="@id/textViewStatus"
            app:layout_constraintTop_toTopOf="@id/textViewRouteName" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/example_status"
            android:textColor="@color/status_on_time"
            android:textSize="@dimen/text_size_body"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textViewRouteName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewRouteName" />


        <LinearLayout
            android:id="@+id/layoutDepartureInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRouteName">

            <TextView
                android:id="@+id/textViewDepartureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_departure"
                android:textColor="@color/text_secondary_on_light"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@+id/textViewDepartureTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/example_departure_time"
                android:textColor="@color/text_primary_on_light"
                android:textSize="@dimen/text_size_body" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutArrivalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/layoutDepartureInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutDepartureInfo">

            <TextView
                android:id="@+id/textViewArrivalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_arrival"
                android:textColor="@color/text_secondary_on_light"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@+id/textViewArrivalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/example_arrival_time"
                android:textColor="@color/text_primary_on_light"
                android:textSize="@dimen/text_size_body" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutTransfersInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDepartureInfo">

            <TextView
                android:id="@+id/textViewTransfersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_transfers"
                android:textColor="@color/text_secondary_on_light"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@+id/textViewTransfersValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/example_transfers_value"
                android:textColor="@color/text_primary_on_light"
                android:textSize="@dimen/text_size_body" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTransportTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_small"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTransfersInfo">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="@drawable/background_transport_tag"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/transport_tag_padding_horizontal"
                android:paddingVertical="@dimen/transport_tag_padding_vertical">

                <ImageView
                    android:layout_width="@dimen/tag_icon_size"
                    android:layout_height="@dimen/tag_icon_size"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:src="@drawable/ic_bus_alt_16dp"
                    app:tint="@color/icon_tint_on_light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_transport_mode_1"
                    android:textColor="@color/text_primary_on_light"
                    android:textSize="@dimen/text_size_caption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_transport_tag"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/transport_tag_padding_horizontal"
                android:paddingVertical="@dimen/transport_tag_padding_vertical">

                <ImageView
                    android:layout_width="@dimen/tag_icon_size"
                    android:layout_height="@dimen/tag_icon_size"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:src="@drawable/ic_train_alt_16dp"
                    app:tint="@color/icon_tint_on_light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_transport_mode_2"
                    android:textColor="@color/text_primary_on_light"
                    android:textSize="@dimen/text_size_caption" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>