<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_content_top_margin"
        android:layout_marginEnd="@dimen/spacing_large"
        android:text="@string/title_plan_your_journey"
        android:textColor="@color/text_primary_dark_bg"
        android:textSize="@dimen/text_size_display_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutFromLocation"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:background="@drawable/rounded_input_field_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/input_field_padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <View
            android:id="@+id/dotFrom"
            android:layout_width="@dimen/dot_indicator_size"
            android:layout_height="@dimen/dot_indicator_size"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:background="@drawable/circular_dot_green" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_from_location"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress|textCapSentences"
            android:maxLines="1"
            android:textColor="@color/text_primary_dark_bg"
            android:textColorHint="@color/text_secondary_dark_bg"
            android:textSize="@dimen/text_size_body" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutToDestination"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:background="@drawable/rounded_input_field_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/input_field_padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutFromLocation">

        <View
            android:id="@+id/dotTo"
            android:layout_width="@dimen/dot_indicator_size"
            android:layout_height="@dimen/dot_indicator_size"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:background="@drawable/circular_dot_red" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_to_destination"
            android:imeOptions="actionDone"
            android:inputType="textPostalAddress|textCapSentences"
            android:maxLines="1"
            android:textColor="@color/text_primary_dark_bg"
            android:textColorHint="@color/text_secondary_dark_bg"
            android:textSize="@dimen/text_size_body" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDateTimeButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToDestination">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonToday"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_today"
            android:textAlignment="center"
            android:textColor="@color/text_primary_dark_bg"
            app:backgroundTint="@color/input_field_background"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_calendar_today_24dp"
            app:iconGravity="start"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/text_primary_dark_bg"
            app:strokeColor="@color/input_field_background" />

        <Space
            android:layout_width="@dimen/spacing_medium"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNow"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_now"
            android:textAlignment="center"
            android:textColor="@color/text_primary_dark_bg"
            app:backgroundTint="@color/input_field_background"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_access_time_24dp"
            app:iconGravity="start"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/text_primary_dark_bg"
            app:strokeColor="@color/input_field_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutActionButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDateTimeButtons">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFindRoutes"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/button_find_routes"
            android:textColor="@color/text_primary_dark_bg"
            app:backgroundTint="@color/button_primary_blue"
            app:cornerRadius="@dimen/button_corner_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFavorite"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/spacing_medium"
            android:contentDescription="@string/content_description_favourite_routes"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:backgroundTint="@color/input_field_background"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_star_border_24dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/icon_tint_light" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSavedTrips"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/spacing_small"
            android:contentDescription="@string/content_description_saved_trips"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:backgroundTint="@color/input_field_background"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_bookmark_border_24dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/icon_tint_light" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewAvailableRoutes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@color/available_routes_background"
        android:fillViewport="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                android:id="@+id/textViewAvailableRoutesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_available_routes"
                android:textColor="@color/text_primary_on_light"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRoutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_route" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>