<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip_details_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/available_routes_background"
    android:fitsSystemWindows="true"
    tools:context=".TripDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDarkHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:paddingBottom="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium"
            android:src="@drawable/ic_arrow_back_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_tint_light" />

        <TextView
            android:id="@+id/textViewScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Trip Details"
            android:textColor="@color/text_primary_dark_bg"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonBack" />

        <LinearLayout
            android:id="@+id/layoutHeaderSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewScreenTitle">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_time"
                    android:textColor="@color/text_secondary_dark_bg"
                    android:textSize="@dimen/text_size_caption" />

                <TextView
                    android:id="@+id/textTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary_dark_bg"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold"
                    tools:text="28 min" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure"
                    android:textColor="@color/text_secondary_dark_bg"
                    android:textSize="@dimen/text_size_caption" />

                <TextView
                    android:id="@+id/textOverallDepartureTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary_dark_bg"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold"
                    tools:text="1:39 pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival"
                    android:textColor="@color/text_secondary_dark_bg"
                    android:textSize="@dimen/text_size_caption" />

                <TextView
                    android:id="@+id/textOverallArrivalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary_dark_bg"
                    android:textSize="@dimen/text_size_body"
                    android:textStyle="bold"
                    tools:text="2:11 pm" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewJourneyLegsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:paddingHorizontal="@dimen/spacing_large"
        android:text="@string/journey_legs"
        android:textColor="@color/text_primary_on_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDarkHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewJourneyLegs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/spacing_large"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewJourneyLegsTitle"
        tools:itemCount="3"
        tools:listitem="@layout/item_journey_leg" />

</androidx.constraintlayout.widget.ConstraintLayout>